
* bam(...,discrete=TRUE) does not currently deal with the corner case in 
  which no smoother is penalized.

1.8-29

* predict.gam bug fix - parameteric interaction terms could be dropped for 
  type="terms" if there were no smooths. knock on was that they were also 
  dropped for all bam(...,discrete=TRUE) fits. (Thanks Justin Davis.)

* gam.fit4 initial divergence bug fix.

* Gamma location-scale family 'gammals' added. See ?gammals. 

* row-wise Kronecker product operator %.% added for convenience.

* changes to general families to allow return of first deriv of penalized 
  Hessian component more easily.

* ocat bug fix. Response scale prediction was wrong - it ignored the estimated
  thresholds. Thanks to Fabian Scheipl. 

* bam deviance could be wrongly returned, leading to 100% explained 
  deviance. Fixed.  

1.8-28

* fix of obscure sp naming bug.	 

* changed some contour default colours from green to blue (they overlay 
  heatmaps, so green was a stupid choise).

* Tweedie likelihood evaluation code made slightly more robust - for a model
  with machine zero scale parameter estimate it could segfault, as series 
  maximum location could then overflow integer storage. Fixed + upper limit 
  imposed on series length (warning if its not enough). 

1.8-27

** Added routine 'ginla' for fully Bayesian inference based on an integrated
  nested Laplace approximation (INLA) approach. See ?ginla.

* Tweedie location scale family added: 'twlss'. 

* gam.fit5 modified to distinguish more carefully between +ve semi definite
  and +ve definite. Previously could fail, claiming indefiniteness when it 
  should not have. Affects general families.

* bam was ignoring supplied scale parameter in extended family cases - fixed.

* work around in list formula handling for reformulate sometimes setting
  response to a name in place of a call.

* preinitialize in general families is now a function, not an expression. See 
  cox.ph for an example.
